--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h1. activemerchant_patch_for_china
 
 *Please note! This active_merchant patch is written by nouse.*
 
-This plugin is an active_merchant patch for china online payment platform, now it supports alipay, bill99 and tenpay.
+This plugin is an active_merchant patch for china online payment platform, now it supports alipay (支付宝), 99bill (快钱) and tenpay (财付通).
 
 **************************************************************************
 
@@ -38,6 +38,8 @@ ActiveMerchant::Billing::Integrations::Alipay::ACCOUNT
 h2. Usage
 
 
+
+**************************************************************************
 
 
 Copyright (c) 2009 [nouse], released under the MIT license
