--- a/README.textile
+++ b/README.textile
@@ -47,136 +47,11 @@ require 'active_merchant/billing/integrations/action_view_helper'
 ActionView::Base.send(:include, ActiveMerchant::Billing::Integrations::ActionViewHelper)
 </code></pre>
 
-then define your api key, account and email
-
-<pre><code>
-ActiveMerchant::Billing::Integrations::Alipay::KEY
-ActiveMerchant::Billing::Integrations::Alipay::ACCOUNT
-ActiveMerchant::Billing::Integrations::Alipay::EMAIL
-</code></pre>
-
 **************************************************************************
 
 h2. Usage
 
-*Alipay*
-
-Request Form:
-
-<pre><code>
-<% payment_service_for 'payment code', ActiveMerchant::Billing::Integrations::Alipay::ACCOUNT,
-                            :service => :alipay,
-                            :html => { :id => 'payment-form', :method => :get } do |service| %>
-  <% service.total_fee 0.02 %>
-  <%# service.price 0.01 %>
-  <%# service.quantity 2 %>
-  <% service.seller :email => ActiveMerchant::Billing::Integrations::Alipay::EMAIL %>
-  <% service.notify_url url_for(:only_path => false, :action => 'notify') %>
-  <% service.return_url url_for(:only_path => false, :action => 'done') %>
-  <% service.show_url url_for(:only_path => false, :action => 'show') %>
-  <% service.body 'payment body' %>
-  <% service.charset "utf-8" %>
-  <% service.service "create_direct_pay_by_user" %>
-  <% service.payment_type 1 %>
-  <% service.subject 'payment subject' %>
-  <% service.sign %>
-<% end %>
-<%= button_to_function "Submit", "document.getElementById('payment-form').submit();" %>
-</code></pre>
-
-*payment code is the out_trade_no, it must be unique.*
-amount is the total_fee.
-payment body is the body of the payment.
-payment subject is the subject of the payment.
-
-
-Notify action:
-
-<pre><code>
-notification = ActiveMerchant::Billing::Integrations::Alipay::Notification.new(request.raw_post)
-
-txn = AlipayTxn.create(:notify_id => notification.notify_id, 
-                       :total_fee => notification.total_fee, 
-                       :status => notification.trade_status, 
-                       :trade_no => notification.trade_no, 
-                       :received_at => notification.notify_time)
-
-if notification.complete?
-  txn.pay!
-else
-  txn.pending!
-end
-</code></pre>
-
-Return action:
-
-<pre><code>
-def done
-  r = ActiveMerchant::Billing::Integrations::Alipay::Return.new(request.query_string)  
-  unless @result = r.success?  
-    logger.warn(r.message)  
-  end  
-end
-</code></pre>
-
-**************************************************************************
-
-h2. Interface
-
-*Alipay*
-
-for helper
-
-<pre><code>
-mapping :account, 'partner'
-mapping :total_fee, 'total_fee'
-mapping :price, 'price'
-mapping :quantity, 'quantity'
-mapping :order, 'out_trade_no'
-mapping :seller, :email => 'seller_email',
-                 :id => 'seller_id'
-mapping :buyer, :email => 'buyer_email',
-                :id => 'buyer_id'
-mapping :notify_url, 'notify_url'
-mapping :return_url, 'return_url'
-mapping :show_url, 'show_url'
-mapping :body, 'body'
-mapping :subject, 'subject'
-mapping :charset, '_input_charset'
-mapping :service, 'service'
-mapping :payment_type, 'payment_type'
-mapping :paymethod, 'paymethod'
-mapping :defaultbank, 'defaultbank'
-mapping :royalty_type, 'royalty_type'
-mapping :royalty_parameters, 'royalty_parameters'
-mapping :it_b_pay, 'it_b_pay'
-</code></pre>
-
-for notification
-
-<pre><code>
-notify_type
-notify_id
-notify_time
-out_trade_no
-trade_no
-payment_type
-subject
-body
-price
-quantity
-total_fee
-trade_status
-refund_status
-seller_email
-seller_id
-buyer_email
-buyer_id
-gmt_create
-gmt_payment
-gmt_close
-gmt_refund
-</code></pre>
+"Alipay (支付宝)":http://wiki.github.com/flyerhzm/activemerchant_patch_for_china/alipay
 
 **************************************************************************
 
