--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,12 @@ h1. activemerchant_patch_for_china
 
 This plugin is an active_merchant patch for china online payment platform, now it supports alipay (支付宝), 99bill (快钱), tenpay (财付通), 19pay(捷迅支付) and yeepay(易宝).
 
-<a href='http://www.pledgie.com/campaigns/14062'><img alt='Click here to lend your support to: activemerchant patch for china and make a donation at www.pledgie.com !' src='http://www.pledgie.com/campaigns/14062.png?skin_name=chrome' border='0' /></a>
+*************************************************************************
+
+h2. Donate
+
+"Donatecn":http://donatecn.com
+"Pledgie":http://www.pledgie.com/campaigns/14062
 
 **************************************************************************
 
